# Flask-SimplePay

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
flask_simplepay/: __init__.py  core.py  model.py
