[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-SimplePay"
version = "1.7"
authors = [
  { name="Gere Lóránt", email="gerelorant@gmail.com" },
]
description = "OTP SimplePay payment extension for Flask"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gerelorant/Flask-SimplePay"